force-app/main/default/objects/Custom_Itinerary__c/Custom_Itinerary__c.object-meta.xml
<CustomObject>
    <label>Custom Itinerary</label>
    <nameField>
        <displayFormat>CIT{0000000}</displayFormat>
        <label>Cus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Itineraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>