force-app/main/default/objects/Custom_Itinerary__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>