force-app/main/default/objects/Custom_Itinerary__c/fields/deal__c.field-meta.xml
<CustomField>
    <fullName>deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Custom Itineraries</relationshipLabel>
    <relationshipName>Custom_Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>