force-app/main/default/objects/Custom_Itinerary__c/fields/itinerary_competed__c.field-meta.xml
<CustomField>
    <fullName>itinerary_competed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Itinerary Competed</label>
    <type>Checkbox</type>
</CustomField>