force-app/main/default/objects/Custom_Itinerary__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Custom Itineraries</relationshipLabel>
    <relationshipName>Custom_Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>