force-app/main/default/objects/Custom_Itinerary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>deal__c</columns>
    <columns>comment__c</columns>
    <columns>itinerary_competed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>