force-app/main/default/objects/Custom_Itinerary__c/listViews/Incomplete.listView-meta.xml
<ListView>
    <fullName>Incomplete</fullName>
    <columns>NAME</columns>
    <columns>deal__c</columns>
    <columns>order__c</columns>
    <columns>comment__c</columns>
    <columns>itinerary_competed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>itinerary_competed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Incomplete</label>
</ListView>